<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
          android:title="@string/menu_title_search"
          android:orderInCategory="1"
          android:icon="@drawable/ic_search"
          app:showAsAction="always"/>

    <item android:id="@+id/action_add_to_favorite"
          android:title="@string/title_menu_add_to_favorite"
          android:icon="@drawable/ic_add_to_favorite"
          app:showAsAction="ifRoom"/>
</menu>