...
                    android:minHeight="?attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark"/>

            <com.ferfalk.simplesearchview.SimpleSearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:type="card"
                    android:background="@color/colorPrimary"/>

        </FrameLayout>
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_search_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_events"/>

        <LinearLayout
...
