...
                    android:fitsSystemWindows="true"
                    android:gravity="bottom"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    app:layout_collapseMode="parallax">

                <ImageView
                        android:id="@+id/detail_home_team_badge"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@null"
                        android:layout_toStartOf="@id/detail_home_score"
                        android:layout_above="@id/layout_team_name"
                        android:layout_marginBottom="5dp"
...
                        android:textSize="32sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="#FF9800"
                        tools:text="3"/>

                <ImageView
                        android:id="@+id/detail_away_team_badge"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@null"
                        android:layout_toEndOf="@id/detail_away_score"
                        android:layout_above="@id/layout_team_name"
                        android:layout_marginBottom="5dp"
...
